# CompilerConstruction

./: CompilerConstruction.cabal  CompilerConstruction.opam  dune-project
.github/workflows/: Haskell.yml  ocaml.yml
Automata/: DFA.hs
Automata/Automata/: Dfa.hs  Internal.hs  Nfa.hs
CompilerConstruction/CompilerConstruction/: Lexing.hs
TestAutomata/: DfaTests.hs  InternalTests.hs  Main.hs  NfaTests.hs
lib/: dune
test/: dune
