cabal-version:      2.4
name:               CompilerConstruction
version:            0.1.0.0

author:             Ofsouzap
maintainer:         ofsouzap@gmail.com

library Automata
    exposed-modules:  DFA
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   Automata
    default-language: Haskell2010
