cabal-version:      2.4
name:               CompilerConstruction
version:            0.1.0.0

author:             Ofsouzap
maintainer:         ofsouzap@gmail.com

library
    exposed-modules:  CompilerConstruction.Lexing
    build-depends:    base ^>=4.16.4.0,
                      QuickCheck,
                      Automata
    hs-source-dirs:   CompilerConstruction
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-unused-top-binds

library Automata
    exposed-modules:  Automata.Internal,
                      Automata.Dfa,
                      Automata.Nfa
    build-depends:    base ^>=4.16.4.0,
                      containers,
                      QuickCheck
    hs-source-dirs:   Automata
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-unused-top-binds

test-suite TestAutomata
    main-is:          Main.hs
    other-modules:    Utils,
                      InternalTests,
                      DfaTests,
                      NfaTests
    build-depends:    base ^>=4.16.4.0,
                      containers,
                      hspec,
                      QuickCheck,
                      checkers,
                      hspec-checkers,
                      Automata
    hs-source-dirs:   TestAutomata
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-unused-top-binds
